# git-ws-repo

./: .cookiecutter.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst
docs/static/: cli.init.txt  cli.sync.txt  cli.txt
gitwsrepo/: __init__.py  repomanifestformat.py
gitwsrepo/_cli/: __init__.py  common.py
src/gitwsrepo/: __init__.py  repomanifestformat.py
src/gitwsrepo/_cli/: __init__.py  common.py
tests/: __init__.py  common.py  test_repomanifestformat.py  util.py
tests/refdata/test_repomanifestformat/test_default/: logging.txt
tests/refdata/test_repomanifestformat/test_repo/: gitws.toml  logging.txt
tests/refdata/tests.test_repomanifestformat/test_example/: logging.txt
tests/refdata/tests.test_repomanifestformat/test_repo/: gitws.toml  logging.txt
tests/testdata/: example.xml  incomplete.xml  repo.xml  something.xml
